# s-p-e-c-t-r-e

./: LICENSE  README.md  pyproject.toml  requirements.txt
spectre/backend/: ai_analyzer.py  main.py  screen_capture.py  spectre_agent.py  suggestion_engine.py
spectre/frontend/src/: App.js
spectre/frontend/src/components/: SuggestionsPanel.js
spectre_cli/: __init__.py  __main__.py  capture.py  client.py  config.py  display.py  voice.py
